--- a/FoodList/Components/FoodList/FoodList.html
+++ b/FoodList/Components/FoodList/FoodList.html
@@ -11,4 +11,7 @@
             </md-list-item>
         </md-list>
     </md-content>
+    <md-button class="md-fab md-mini md-primary md-fab-bottom-right" aria-label="Use Android">
+        <md-icon><i class="material-icons">add</i></md-icon>
+    </md-button>
 </div>
