--- a/FoodList/Components/FoodList/NewFoodListItemTemplate.html
+++ b/FoodList/Components/FoodList/NewFoodListItemTemplate.html
@@ -2,15 +2,39 @@
     <form>
         <md-toolbar>
             <div class="md-toolbar-tools">
-                <h2>Mango (Fruit)</h2>
+                <md-button class="md-icon-button" aria-label="Close Dialog" ng-click="newFoodListCtrl.cancel()">
+                    <i class="material-icons">arrow_back</i>
+                </md-button>
+                <h2>New Item</h2>
                 <span flex></span>
-                <md-button class="md-icon-button" ng-click="newFoodListCtrl.cancel()">
-                    <md-icon md-svg-src="img/icons/ic_close_24px.svg" aria-label="Close dialog"></md-icon>
+                <md-button class="md-icon-button" aria-label="Close Dialog" ng-click="newFoodListCtrl.cancel()">
+                    <i class="material-icons">close</i>
                 </md-button>
             </div>
         </md-toolbar>
-        <md-dialog-content>
-            lsdkfrjsdlkfjlksdjfsdkjlf
-        </md-dialog-content>
-    </form>
+    <md-dialog-content>
+        <div style="overflow: hidden">
+            <ng-form name="newFoodListCtrl.newFoodListItemForm">
+                <md-input-container class="md-block">
+                    <label>Name</label>
+                    <input ng-model="newFoodListCtrl.foodStorage.name">
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Amount</label>
+                    <input type="number" step="any" ng-model="newFoodListCtrl.foodStorage.amount" min="0" />
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Location</label>
+                    <md-select ng-model="newFoodListCtrl.foodStorage.location">
+                        <md-option></md-option>
+                    </md-select>
+                </md-input-container>
+                <md-datepicker ng-model="newFoodListCtrl.foodStorage.dateStorage" md-placeholder="Enter date">
+                </md-datepicker>
+            </ng-form>
+        </div>
+    </md-dialog-content>
+        <md-button class="md-fab md-mini md-primary md-fab-bottom-right" aria-label="New Item" ng-click="newFoodListCtrl.btnSaveFoodListItem()">
+            <md-icon><i class="material-icons">save</i></md-icon>
+        </md-button>
 </md-dialog>
