display on phone

--- a/FoodList/Components/FoodList/FoodList.html
+++ b/FoodList/Components/FoodList/FoodList.html
@@ -5,7 +5,7 @@
                 <div class="md-list-item-text" layout="column">
                     <h3>{{ item.name }} in {{ item.location }}</h3>
                     <h4>Hoeveelheid/Porties: {{ item.amount }}</h4>
-                    <p>{{item.dateStorage|date:'dd-MM-yyyy'}}{{item.present}}</p>
+                    <p>{{item.dateStorage|date:'dd-MM-yyyy'}}</p>
                 </div>
                 <md-divider></md-divider>
             </md-list-item>
