--- a/FoodList/Components/FoodList/NewFoodListItemTemplate.html
+++ b/FoodList/Components/FoodList/NewFoodListItemTemplate.html
@@ -1,16 +1,16 @@
-﻿<md-dialog ng-cloak>
-        <md-toolbar>
-            <div class="md-toolbar-tools">
-                <md-button class="md-icon-button" aria-label="Close Dialog" ng-click="newFoodListCtrl.cancel()">
-                    <i class="material-icons">arrow_back</i>
-                </md-button>
-                <h2>New Item</h2>
-                <span flex></span>
-                <md-button class="md-icon-button" aria-label="Close Dialog" ng-click="newFoodListCtrl.cancel()">
-                    <i class="material-icons">close</i>
-                </md-button>
-            </div>
-        </md-toolbar>
+﻿<md-dialog ng-cloak class="largescreen-dialog">
+    <md-toolbar>
+        <div class="md-toolbar-tools">
+            <md-button class="md-icon-button" aria-label="Close Dialog" ng-click="newFoodListCtrl.cancel()">
+                <i class="material-icons">arrow_back</i>
+            </md-button>
+            <h2>New Item</h2>
+            <span flex></span>
+            <md-button class="md-icon-button" aria-label="Close Dialog" ng-click="newFoodListCtrl.cancel()">
+                <i class="material-icons">close</i>
+            </md-button>
+        </div>
+    </md-toolbar>
     <md-dialog-content>
         <div style="overflow: hidden">
             <ng-form name="newFoodListCtrl.newFoodListItemForm">
@@ -20,7 +20,11 @@
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>Amount</label>
-                    <input type="number" step="any" ng-model="newFoodListCtrl.foodStorage.amount" min="0" />
+                    <input type="number" step="any" ng-model="newFoodListCtrl.foodStorage.amount" min="0"/>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>persons</label>
+                    <input type="number" step="any" ng-model="newFoodListCtrl.foodStorage.persons" min="0"/>
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>Location</label>
@@ -33,7 +37,10 @@
             </ng-form>
         </div>
     </md-dialog-content>
+    <md-dialog-actions layout="row">
         <md-button class="md-fab md-mini md-primary md-fab-bottom-right" aria-label="New Item" ng-click="newFoodListCtrl.btnSaveFoodListItem()">
             <md-icon><i class="material-icons">save</i></md-icon>
         </md-button>
+    </md-dialog-actions>
+
 </md-dialog>
