--- a/FoodList/Components/FoodList/FoodList.html
+++ b/FoodList/Components/FoodList/FoodList.html
@@ -3,8 +3,8 @@
         <md-list>
             <md-list-item class="md-3-line" ng-repeat="item in foodListCtrl.foodStorageCol track by $index">
                 <div class="md-list-item-text" layout="column">
-                    <h3>{{ item.name }} in {{ item.location }}</h3>
-                    <h4>{{ item.amount }}<span ng-if="item.amount>20">g/ml</span>&emsp;<span ng-if="item.persons>0">{{ item.persons }}</span><span ng-if="item.persons==1">persoon</span><span ng-if="item.persons>1">personen</span></h4>
+                    <h3>{{ item.name }}<span ng-if="item.amount<=20">({{ item.amount }})</span> in {{ item.location }}</h3>
+                    <h4><span ng-if="item.amount>20">{{ item.amount }} g/ml</span>&emsp;<span ng-if="item.persons>0">{{ item.persons }}</span><span ng-if="item.persons==1">persoon</span><span ng-if="item.persons>1">personen</span></h4>
                     <p>{{item.dateStorage|date:'dd-MM-yyyy'}}</p>
                 </div>
                 <md-divider></md-divider>
