remove from array

--- a/FoodList/Components/FoodList/NewFoodListItemTemplate.html
+++ b/FoodList/Components/FoodList/NewFoodListItemTemplate.html
@@ -38,7 +38,7 @@
         </div>
     </md-dialog-content>
     <md-dialog-actions layout="row">
-        <md-button class="md-fab md-mini md-primary md-fab-bottom-right" aria-label="New Item" ng-click="newFoodListCtrl.btnSaveFoodListItem()">
+        <md-button class="md-fab md-primary md-fab-bottom-right" aria-label="New Item" ng-click="newFoodListCtrl.btnSaveFoodListItem()">
             <md-icon><i class="material-icons">save</i></md-icon>
         </md-button>
     </md-dialog-actions>
