dealing with multiples, fab button position

--- a/FoodList/Components/FoodList/FoodList.html
+++ b/FoodList/Components/FoodList/FoodList.html
@@ -14,7 +14,7 @@
             </md-list-item>
         </md-list>
     </md-content>
-    <md-button class="md-fab md-primary md-fab-bottom-right" aria-label="New Item" ng-click="foodListCtrl.btnOpenFoodListItemForm($event)">
+    <md-button class="md-fab md-primary md-fab-bottom-right" aria-label="New Item" ng-click="foodListCtrl.btnOpenFoodListItemForm($event)" style="position:fixed">
         <md-icon><i class="material-icons">add</i></md-icon>
     </md-button>
 </div>
