--- a/FoodList/Components/FoodList/FoodList.html
+++ b/FoodList/Components/FoodList/FoodList.html
@@ -1,7 +1,7 @@
 ﻿<div layout="column">
     <md-content>
         <md-list>
-            <md-list-item class="md-3-line secondary-button-padding" ng-repeat="item in foodListCtrl.foodStorageCol track by $index" ng-click="foodListCtrl.removeFoodStorageItem(item,$index, $event)">
+            <md-list-item class="md-3-line secondary-button-padding" ng-repeat="item in foodListCtrl.foodStorageCol track by $index" ng-click="foodListCtrl.editFoodStorageItem(item,$index,$event)">
                 <div class="md-list-item-text" layout="column">
                     <h3>
                         {{ item.name }}<span ng-if="item.amount<=20">({{ item.amount }})</span> in {{ item.location }}
@@ -9,7 +9,7 @@
                     <h4><span ng-if="item.amount>20">{{ item.amount }} g/ml</span>&emsp;<span ng-if="item.persons>0">{{ item.persons }}</span><span ng-if="item.persons==1">persoon</span><span ng-if="item.persons>1">personen</span></h4>
                     <p>{{item.dateStorage|date:'dd-MM-yyyy'}}</p>
                 </div>
-                <md-button class="md-secondary" ng-click="foodListCtrl.editFoodStorageItem(item,$index,$event)">More Info</md-button>
+                <md-button class="md-secondary" ng-click="foodListCtrl.removeFoodStorageItem(item,$index, $event)">Delete</md-button>
                 <md-divider></md-divider>
             </md-list-item>
         </md-list>
