--- a/FoodList/Components/Home/Home.html
+++ b/FoodList/Components/Home/Home.html
@@ -1,3 +1,9 @@
 ﻿<div layout="column">
-    {{homeCtrl.testVar}}
+    <md-content>
+        <md-button class="md-primary md-raised" ng-click="homeCtrl.btnSignIn_Clicked()">Sign in</md-button>
+
+
+        <!--api test-->
+        {{homeCtrl.testVar}}
+    </md-content>
 </div>
