--- a/FoodList/Components/Login/Login.html
+++ b/FoodList/Components/Login/Login.html
@@ -1,5 +1,7 @@
 ﻿<div layout="column">
     <md-content>
-
+        <md-button class="md-primary md-raised" ng-click="loginCtrl.authenticate('google')">
+            Sign in with Google
+        </md-button>
     </md-content>
 </div>
