--- a/FoodList/Components/Home/Home.html
+++ b/FoodList/Components/Home/Home.html
@@ -1,10 +1,10 @@
 ﻿<div layout="column">
     <md-content>
-        <md-button class="md-primary md-raised" ng-click="homeCtrl.btnSignIn_Clicked()">Sign in</md-button>
+        <!--<md-button class="md-primary md-raised" ng-click="homeCtrl.btnSignIn_Clicked()">Sign in</md-button>-->
 
 
         <!--api test-->
-        {{homeCtrl.testVar}}
-        {{homeCtrl.count}}
+        <!--{{homeCtrl.testVar}}
+        {{homeCtrl.count}}-->
     </md-content>
 </div>
