--- a/FoodList/Components/Login/Login.html
+++ b/FoodList/Components/Login/Login.html
@@ -1,7 +1,11 @@
 ﻿<div layout="column">
     <md-content>
-        <md-button class="md-primary md-raised" ng-click="loginCtrl.authenticate('google')">
+        <md-button class="md-primary md-raised" ng-click="loginCtrl.authenticate('google')" ng-show="!loginCtrl.userIsLoggedIn()">
             Sign in with Google
+        </md-button>
+
+        <md-button class="md-primary md-raised" ng-click="loginCtrl.btnLogoutUser_Clicked()" ng-show="loginCtrl.userIsLoggedIn()">
+            Sign Out
         </md-button>
     </md-content>
 </div>
