pantryLocations: model, edmx

--- a/FoodList/Components/Home/Home.html
+++ b/FoodList/Components/Home/Home.html
@@ -6,5 +6,7 @@
         <!--api test-->
         <!--{{homeCtrl.testVar}}
         {{homeCtrl.count}}-->
+
+        Homepage, do something here
     </md-content>
 </div>
